@@ -3392,7 +3392,7 @@ void Mob::CommonDamage(Mob* attacker, sint32 &damage, const int16 spell_id, cons
 
 				if(attacker && attacker->IsClient() && (spell_id != SPELL_UNKNOWN) && damage>0) {
 					char val1[20]={0};
-					attacker->Message_StringID(4,OTHER_HIT_NONMELEE,GetCleanName(),ConvertArray(damage,val1));
+					entity_list.MessageClose_StringID(this, false, 100, MT_NonMelee, OTHER_HIT_NON_MELEE, attacker->GetCleanName(), GetCleanName(),ConvertArray(damage,val1));
 				}
 
 				Death(attacker, damage, spell_id, skill_used);
@@ -3534,7 +3534,15 @@ void Mob::CommonDamage(Mob* attacker, sint32 &damage, const int16 spell_id, cons
 				if (((spell_id != SPELL_UNKNOWN)||(FromDamageShield)) && damage>0) {
 					//special crap for spell damage, looks hackish to me
 					char val1[20]={0};
-					attacker->Message_StringID(MT_NonMelee,OTHER_HIT_NONMELEE,GetCleanName(),ConvertArray(damage,val1));
+						if (FromDamageShield)
+						{
+							if(!attacker->CastToClient()->GetFilter(FilterDamageShields) == FilterHide)
+							{
+							attacker->Message_StringID(MT_DS,HIT_NON_MELEE,GetCleanName(),ConvertArray(damage,val1));
+							}
+						}	
+						else
+                            entity_list.MessageClose_StringID(this, true, 100, MT_NonMelee,OTHER_HIT_NONMELEE,attacker->GetCleanName(),GetCleanName(),ConvertArray(damage,val1));
 			    } else {
 			    	if(damage > 0) {
 						if(spell_id != SPELL_UNKNOWN)
